--- a/bathrooms.html
+++ b/bathrooms.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="Expert bathroom fitting services across Kent. Serving Ashford, Maidstone, Canterbury & Folkestone, from complete renovations to plumbing, tiling & accessibility upgrades.">
+  <meta name="description" content="Expert bathroom fitting across Kent, Ashford, Maidstone, Canterbury & Folkestone. Renovations, plumbing, tiling & accessibility upgrades.">
   <meta name="keywords" content="bathroom fitters Kent, bathroom installation, shower fitting, bath replacement, bathroom tiling, accessible bathrooms, plumbing, Ashford, Maidstone, Canterbury, Folkestone">
   <meta name="robots" content="index, follow">
 
-  <title>Bathroom Services in Kent | A.P.T Builders</title>
+  <title>Bathroom Services in Kent | A.P.T. Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/bathrooms.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
@@ -78,7 +78,7 @@
 
   <link rel="stylesheet" href="styles/style.css" />
 <body>
-<h1 class="visually-hidden">Bathroom Fitting Services in Kent | A.P.T Builders</h1>
+
 
   <header>
     <div class="header">
@@ -159,25 +159,25 @@
 
   <section class="service-banner-bathrooms">
     <div class="banner-overlay-services">
-      <h2 class="banner-content">Bathroom Installations & Renovations</h2>
-      <p>Tailored bathroom solutions for homes across Kent.</p>
+      <h1 class="banner-content">Bathroom Installations & Renovations</h1>
+      <h4>Tailored bathroom solutions for homes across Kent.</h4>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Bathroom Fitting Services in Kent</h2>
+      <h1>Bathroom Fitting Services in Kent</h1>
       <p>Reliable installations and alterations across Maidstone, Canterbury, Ashford, and surrounding areas.</p>
     </section>
 
     <section class="service-content">
-      <h3>Stylish & Functional Bathrooms</h3>
+      <h1>Stylish & Functional Bathrooms</h1>
       <p>
         At A.P.T Builders, we offer a wide range of bathroom services designed to refresh your space, enhance comfort, and suit your lifestyle.
         Whether you’re looking for a modern update or a full replacement, we deliver clean and professional finishes.
       </p>
 
-      <h3 class="included-services">Our Bathroom Services Include:</h3>
+      <h1 class="included-services">Our Bathroom Services Include:</h1>
       <ul>
         <li>Complete bathroom installations</li>
         <li>Layout reconfiguration and upgrades</li>
@@ -186,12 +186,12 @@
         <li>Mobility & accessibility adaptations</li>
       </ul>
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         We proudly serve Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and the wider Kent area, transforming bathrooms with care and precision.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>18+ years of experience</li>
         <li>Fully insured and reliable</li>
@@ -264,7 +264,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
