--- a/brickwork.html
+++ b/brickwork.html
@@ -77,7 +77,7 @@
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-  <h1 class="visually-hidden">Brickwork Services in Kent | A.P.T Builders</h1>
+ 
 
   <header>
     <div class="header">
@@ -158,25 +158,25 @@
  
   <section class="service-banner-brickwork">
     <div class="banner-overlay-services">
-      <h2 class="banner-content">Brickwork & Repointing</h2>
-      <p>Reliable structural and decorative brickwork across Kent.</p>
+      <h1 class="banner-content">Brickwork & Repointing</h1>
+      <h4>Reliable structural and decorative brickwork across Kent.</h4>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Brickwork & Repointing in Kent</h2>
+      <h1>Brickwork & Repointing in Kent</h1>
       <p>From walls to repairs, we cover Maidstone, Canterbury, Ashford, and surrounding areas.</p>
     </section>
 
     <section class="service-content">
-      <h3>High Quality Brickwork Services</h3>
+      <h1>High Quality Brickwork Services</h1>
       <p>
         A.P.T Builders provides expert bricklaying and repointing services for both new builds and restorations. 
         Whether you’re constructing a garden wall, extending a property, or refreshing tired mortar joints, we deliver clean, strong, and long lasting results.
       </p>
 
-      <h3 class="included-services">Our Brickwork Services Include:</h3>
+      <h1 class="included-services">Our Brickwork Services Include:</h1>
       <ul>
         <li>Garden walls and structural builds</li>
         <li>Repointing for aged or damaged mortar</li>
@@ -185,12 +185,12 @@
         <li>Brick repairs and replacements</li>
       </ul>
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         We work across Maidstone, Ashford, Canterbury, Tunbridge Wells, Sevenoaks and all surrounding Kent areas, delivering dependable brickwork built to last.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>18+ years of experience</li>
         <li>Fully insured & reliable</li>
@@ -263,7 +263,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
