--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Get in touch with A.P.T Builders — serving Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells & all Kent. Request a quote or ask a question today.">
+  <meta name="description" content="Contact APT Builders, serving Ashford, Maidstone, Folkestone, Canterbury & all Kent. Request a quote or ask a question today.">
   <meta name="keywords" content="contact, APT Builders, request a quote, enquiries, phone, email, Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells, Kent">
   
   <meta name="robots" content="index, follow">
-  <title>Contact A.P.T Builders | Ashford, Maidstone, Canterbury, Kent</title>
+  <title>Contact A.P.T. Builders | Ashford, Maidstone, Canterbury, Kent</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/contact.html">
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Contact A.P.T Builders in Ashford, Maidstone, Canterbury & Kent</h1>
+
 
   <div class="page-wrapper">
    
@@ -223,7 +223,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
