--- a/decorating.html
+++ b/decorating.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Interior and exterior painting and decorating services across Kent including Ashford, Maidstone, Folkestone, and Canterbury. High-quality finishes from A.P.T Builders.">
+  <meta name="description" content="Professional decorating services across Kent. Interior & exterior painting, wallpapering & finishes in Ashford, Maidstone, Canterbury & more.">
   <meta name="keywords" content="painting, decorating, painters, interior painting, exterior decorating, wallpapering, feature walls, Kent, Ashford, Maidstone, Canterbury, Folkestone">
     
   <meta name="robots" content="index, follow">
-  <title>Painting & Decorating in Kent | A.P.T Builders</title>
+  <title>Painting & Decorating in Kent | A.P.T. Builders</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/decorating.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
@@ -78,7 +78,7 @@
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-<h1 class="visually-hidden">Painting & Decorating Services in Kent | A.P.T Builders</h1>
+
 
   <header>
     <div class="header">
@@ -159,26 +159,26 @@
 
   <section class="service-banner-decorating">
     <div class="banner-overlay-services">
-      <h2 class= "banner-content">Painting & Decorating</h2>
-      <p>Professional finishes inside and out across homes in Kent.</p>
+      <h1 class= "banner-content">Painting & Decorating</h1>
+      <h4>Professional finishes inside and out across homes in Kent.</h4>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Interior & Exterior Decorating Services</h2>
+      <h1>Interior & Exterior Decorating Services</h1>
       <p>Serving Maidstone, Canterbury, Ashford and more with clean, precise painting & decorating work.</p>
     </section>
 
     <section class="service-content">
-      <h3>Clean, Tidy & Detail Driven Decorating</h3>
+      <h1>Clean, Tidy & Detail Driven Decorating</h1>
       <p>
         At A.P.T Builders, we deliver flawless painting and decorating work with a focus on durability, attention to detail, 
         and a tidy finish. Whether you’re looking to refresh a single room, a full property, or the exterior of your home, 
         we’ll help you bring your vision to life.
       </p>
 
-      <h3 class="included-services">Our Painting & Decorating Services Include:</h3>
+      <h1 class="included-services">Our Painting & Decorating Services Include:</h1>
       <ul>
         <li>Interior painting for walls & ceilings</li>
         <li>Woodwork painting: skirting, doors, banisters</li>
@@ -188,12 +188,12 @@
         <li>Preparation: filling, sanding, and priming</li>
       </ul>
 
-      <h3 class="service-locations">Covering All of Kent</h3>
+      <h1 class="service-locations">Covering All of Kent</h1>
       <p>
         From Maidstone to Ashford, Tunbridge Wells to Canterbury, we offer expert painting & decorating throughout the Kent region.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>Over 18 years of experience</li>
         <li>Clean, careful workmanship</li>
@@ -266,7 +266,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
