--- a/extensions.html
+++ b/extensions.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Home extensions, garage conversions and full builds in Kent, covering Ashford, Maidstone, Canterbury & Folkestone. Expand your living space with A.P.T Builders.">
+  <meta name="description" content="Home extensions, garage conversions & full builds in Kent. Covering Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="home extensions, garage conversions, house build, room extension, Kent builders, Ashford, Maidstone, Canterbury, Folkestone">
     
   <meta name="robots" content="index, follow">
-  <title>House Extensions & Conversions | A.P.T Builders Kent</title>
+  <title>House Extensions & Conversions | A.P.T. Builders Kent</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/extensions.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
@@ -78,7 +78,7 @@
 
 </head>
 <body>
-<h1 class="visually-hidden">House Extensions & Garage Conversions in Kent | A.P.T Builders</h1>
+
 
   <header>
     <div class="header">
@@ -159,19 +159,19 @@
 
   <section class="service-banner-extension">
     <div class="banner-overlay-services">
-      <h2 class="banner-content">Home Extensions & Conversions</h2>
-      <p>Expand your space with quality workmanship across Kent.</p>
+      <h1 class="banner-content">Home Extensions & Conversions</h1>
+      <h4>Expand your space with quality workmanship across Kent.</h4>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Extensions & Full Builds in Kent</h2>
+      <h1>Extensions & Full Builds in Kent</h1>
       <p>Delivering expertly built extensions and conversions across Maidstone, Canterbury, Ashford and beyond.</p>
     </section>
 
     <section class="service-content">
-      <h3>Extend & Transform Your Property</h3>
+      <h1>Extend & Transform Your Property</h1>
       <p>
         Whether you’re looking to add extra living space, convert a garage or outbuilding, or build an entirely new structure, 
         A.P.T Builders can help bring your ideas to life.
@@ -179,7 +179,7 @@
         ensuring your extension is safe, functional, and beautifully finished.
       </p>
 
-      <h3 class="included-services">Our Extension & Conversion Services Include:</h3>
+      <h1 class="included-services">Our Extension & Conversion Services Include:</h1>
       <ul>
         <li>Single & double storey home extensions</li>
         <li>Garage & loft conversions</li>
@@ -188,12 +188,12 @@
         <li>Project management from start to finish</li>
       </ul>
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         We work across Kent including Maidstone, Ashford, Canterbury, Tunbridge Wells and surrounding areas, offering smart space solutions tailored to your home.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>18+ years of experience in full builds & alterations</li>
         <li>Trusted by homeowners throughout Kent</li>
@@ -267,7 +267,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
