--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -38,7 +38,7 @@
 
 
   <body>
-    <h1 class="visually-hidden">Kitchens Gallery, A.P.T Builders</h1>
+   
 
   <div class="page-wrapper">
   
@@ -419,7 +419,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
