--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
  
-  <meta name="description" content="Explore completed brickwork projects from A.P.T. Builders including wall building, pointing and restoration services across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Browse our brickwork gallery showcasing walls, extensions & features completed across Kent, including Ashford, Maidstone & Canterbury.">
   <meta name="keywords" content="bricklaying, brickwork gallery, wall building, pointing services, restoration, builders in Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
@@ -38,7 +38,7 @@
 
 </head>
 <body>
-  <h1 class="visually-hidden">Brickwork Gallery | Walls, Pointing & Restoration in Kent</h1>
+  
 
   <div class="page-wrapper">
   <header>
@@ -364,7 +364,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
