--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Painting & Decorating Gallery | A.P.T Builders, Interior & Exterior Finishes in Kent</title>
+  <title>Painting & Decorating Gallery | A.P.T. Builders Kent</title>
 
-  <meta name="description" content="Browse our painting and decorating gallery showcasing interior walls, exterior facades, and decorative finishes across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Interior & exterior painting and decorating across Kent. Serving Ashford, Maidstone, Canterbury & Folkestone. Quality finishes, inside & out.">
   <meta name="keywords" content="painting gallery, decorating gallery, interior painting, exterior painting, wall finishes, Kent decorators, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
@@ -35,8 +35,7 @@
 
 
 <body>
-  <h1 class="visually-hidden">Painting & Decorating Gallery | A.P.T Builders, Interior & Exterior Finishes in Kent</h1>
-
+  
   <div class="page-wrapper">
   
   <header>
@@ -541,7 +540,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
