--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">House Extensions Gallery | A.P.T Builders, Home Expansion Projects in Kent</h1>
+  
 
 
   <div class="page-wrapper">
@@ -538,7 +538,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
