--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Specialist Builds Gallery | A.P.T Builders – Custom Projects Across Kent</title>
+  <title>Specialist Builds Gallery | APT Builders Kent</title>
 
-  <meta name="description" content="Explore our gallery of specialist building projects including swimming pools, bespoke designs, and custom work completed by A.P.T Builders across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Explore our specialist build gallery, stonework, swimming pools, wells & more. Unique projects completed across Kent by APT Builders.">
   <meta name="keywords" content="specialist builds gallery, custom building projects, bespoke building, swimming pool builders, custom extensions, Kent builders, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Specialist Builds Gallery | A.P.T Builders, Bespoke Construction in Kent</h1>
+  
 
 
   <div class="page-wrapper">
@@ -443,7 +443,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
