--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="Comprehensive Kent building services from A.P.T. Builders, including roofing, bathroom & kitchen fittings, landscaping, brickwork, block paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="APT Builders offers roofing, kitchens, landscaping, decorating & more across Ashford, Maidstone, Folkestone & Canterbury.">
   <meta name="keywords" content="building services, Kent builders, local builders, roofing, bathroom fittings, kitchen fittings, landscaping, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
-  <title>A.P.T Builders | Kent Builders for Roofing, Bathrooms, Kitchens, Extensions, Landscaping & Decorating. </title>
+ 
+  <title>A.P.T. Builders | Roofing, Extensions, Landscaping, Decor & More</title>
  
 
 
@@ -16,7 +17,7 @@
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="canonical" href="https://www.aptbuilders.co.uk/" />
   <meta property="og:title" content="A.P.T Builders">
-  <meta property="og:description" content="Reliable Building Services in Kent including Roofing, Kitchen & Bathroom Installations, Blockpaving, Landscaping, Brickwork, Painting & Decorating, Extensions, Conversions and all general building work.">
+  <meta property="og:description" content="A.P.T.Builders a reliable building service offering roofing, kitchens, landscaping, decorating & more across Kent.">
   <meta property="og:image" content="https://www.aptbuilders.co.uk/images/ogimage.png">
 
   <meta property="og:url" content="https://www.aptbuilders.co.uk/">
@@ -93,7 +94,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">A.P.T Builders, Trusted Building Services in Kent</h1>
+ 
   
 
 
@@ -314,9 +315,9 @@
         <div class="bullet-box">
             <a class="bullet-link" href="roofing.html">
             <img src="images/roof.png" alt="Roofing Icon">
-            <h5 style="font-size: 18px;">Roofing</h5>
+            <h5 style="font-size: 20px;">Roofing</h5>
             <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Repairs/New</h6>
-            <p style="font-size: 11px">From repairing both old and new roofs, from fixing leaks, replacing damaged shingles, and restoring worn out 
+            <p style="font-size: 16px">From repairing both old and new roofs, from fixing leaks, replacing damaged shingles, and restoring worn out 
                 structures to ensuring new roofs stay in top condition with preventive maintenance and timely adjustments.</p>
         </div>
            </a>
@@ -328,9 +329,9 @@
         <div class="bullet-box">
             <a class="bullet-link" href="bathrooms.html">
             <img src="images/bathtub_5590126.png" alt="Bathroom Icon">
-            <h5 style="font-size: 18px;">Bathrooms</h5>
+            <h5 style="font-size: 20px;">Bathrooms</h5>
             <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Replacements/Alterations</h6>
-            <p style="font-size: 11px">From complete bathroom replacements to minor alterations, we handle everything from upgrading 
+            <p style="font-size: 16px">From complete bathroom replacements to minor alterations, we handle everything from upgrading 
                 fixtures and retiling to optimizing
                  layouts and improving functionality, ensuring a fresh and contemporary space that suits your lifestyle</p>
         </div>
@@ -339,9 +340,9 @@
         <div class="bullet-box">
             <a class="bullet-link" href="kitchens.html">
             <img src="images/kitchen_2852011.png" alt=" Kitchen Icon">
-            <h5 style="font-size: 18px;">Kitchens</h5>
+            <h5 style="font-size: 20px;">Kitchens</h5>
             <h6 style="font-size: small; font-style: italic;margin-bottom: 5px;">Replacements/Alterations</h6>
-            <p style="font-size: 11px;">We offer kitchen replacements and modifications, from new worktops and cabinets to full layouts,
+            <p style="font-size: 16px;">We offer kitchen replacements and modifications, from new worktops and cabinets to full layouts,
                tiling, and appliance installation, tailored to modernise your space and improve usability.</p>
 
             </p>
@@ -353,9 +354,9 @@
         <div class="bullet-box">
             <a class="bullet-link" href="brickwork.html">
             <img src="images/masonry_14382129.png" alt="Brickwork Icon">
-            <h5 style="font-size: 18px;">Brickwork</h5>
+            <h5 style="font-size: 20px;">Brickwork</h5>
             <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Re-pointing/Other</h6>
-            <p style="font-size: 11px;"> Delivering high-quality brickwork and re-pointing, from constructing 
+            <p style="font-size: 16px;"> Delivering high-quality brickwork and re-pointing, from constructing 
                 new walls and features to carefully restoring worn mortar joints, 
                 enhancing both the structural integrity and aesthetic appeal of your property</p>
         </div>
@@ -364,9 +365,9 @@
         <div class="bullet-box">
             <a class="bullet-link" href="blockpaving.html">
             <img src="images/bricks_16739854.png" alt="Block Paving Icon">
-            <h5 style="font-size: 18px;">Block Paving</h5>
+            <h5 style="font-size: 20px;">Block Paving</h5>
             <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Driveways/Pathways</h6>
-            <p style="font-size: 11px">With expertly laid block paving, driveways, and pathways, 
+            <p style="font-size: 16px">With expertly laid block paving, driveways, and pathways, 
                 offering a range of designs and materials to create durable, 
                 weather resistant, and visually appealing surfaces tailored to your home or business.</p>
         </div>
@@ -376,9 +377,9 @@
         <div class="bullet-box">
             <a class="bullet-link" href="landscaping.html">
             <img src="images/Landscaping.png" alt="Landscaping Icon">
-            <h5 style="font-size: 18px;">Landscaping</h5>
+            <h5 style="font-size: 20px;">Landscaping</h5>
             <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Groundwork/General</h6>
-            <p style="font-size: 11px;">We cover all aspects of landscaping, from groundworks and drainage to turfing, planting, 
+            <p style="font-size: 16px;">We cover all aspects of landscaping, from groundworks and drainage to turfing, planting, 
                and garden maintenance, delivering high quality solutions that enhance and sustain your outdoor space.</p>
         </div>
             </a>
@@ -386,9 +387,9 @@
             <div class="bullet-box">
                 <a class="bullet-link" href="decorating.html">
                 <img src="images/painting_10722140.png" alt="Decorating Icon">
-                <h5 style="font-size: 18px;">Painting & Decorating</h5>
+                <h5 style="font-size: 20px;">Painting & Decorating</h5>
                 <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Interior/Exterior</h6>
-                <p style="font-size: 11px;">We provide high quality painting and decorating services for both interior and exterior spaces. 
+                <p style="font-size: 16px;">We provide high quality painting and decorating services for both interior and exterior spaces. 
                     From refreshing walls and ceilings to carefully finishing woodwork such as doors, skirtings, and window frames, we ensure a clean, 
                     professional finish throughout. Our exterior work also includes durable, weather resistant coatings to protect and enhance your property.</p>
             </div>
@@ -397,9 +398,9 @@
                 <div class="bullet-box">
                     <a class="bullet-link" href="extensions.html">
                     <img src="images/house_795561.png" alt="Extension Icon">
-                    <h5 style="font-size: 18px;">Extensions</h5>
+                    <h5 style="font-size: 20px;">Extensions</h5>
                     <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Full Builds/Conversions</h6>
-                    <p style="font-size: 11px;">We undertake complete new builds, home extensions, and conversions with precision and care, managing each stage from groundwork to finishing touches. Whether you’re expanding your living space, converting a loft or garage, 
+                    <p style="font-size: 16px;">We undertake complete new builds, home extensions, and conversions with precision and care, managing each stage from groundwork to finishing touches. Whether you’re expanding your living space, converting a loft or garage, 
                         or starting from the ground up, we ensure structural integrity, practical design, and a high quality finish tailored to your needs.</p>
                     </div>
                 </a>
