--- a/kitchens.html
+++ b/kitchens.html
@@ -77,7 +77,7 @@
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-   <h1 class="visually-hidden">Kitchen Fitting Services in Kent | A.P.T Builders</h1>
+  
   <header>
     <div class="header">
       <a href="index.html">
@@ -159,25 +159,25 @@
 
   <section class="service-banner-kitchens">
     <div class="banner-overlay-services">
-      <h2 class="banner-content">Kitchen Design & Installation</h2>
+      <h1 class="banner-content">Kitchen Design & Installation</h1>
       <p>Modern, functional kitchens fitted across Kent.</p>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Kitchen Fitting Services in Kent</h2>
+      <h1>Kitchen Fitting Services in Kent</h1>
       <p>Custom kitchen installations and refurbishments across Maidstone, Canterbury, Ashford, and more.</p>
     </section>
 
     <section class="service-content">
-      <h3>Beautiful & Practical Kitchens</h3>
+      <h1>Beautiful & Practical Kitchens</h1>
       <p>
         A.P.T Builders specialises in full kitchen renovations and partial upgrades, tailored to your space and lifestyle. 
         Whether you want a sleek modern finish or a practical family friendly layout, we help bring your kitchen vision to life.
       </p>
 
-      <h3 class="included-services">Our Kitchen Services Include:</h3>
+      <h1 class="included-services">Our Kitchen Services Include:</h1>
       <ul>
         <li>Complete kitchen fitting & installation</li>
         <li>Cabinet and worktop replacements</li>
@@ -186,12 +186,12 @@
         <li>Electrical upgrades & lighting installations</li>
       </ul>
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         We carry out kitchen services across Maidstone, Canterbury, Ashford, Tunbridge Wells, and the wider Kent region, delivering quality and detail every time.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>18+ years of experience</li>
         <li>Fully insured & reliable</li>
@@ -270,7 +270,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
