--- a/roofing.html
+++ b/roofing.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-    <h1 class="visually-hidden">Roofing Services in Kent | Roof Repairs & Installation by A.P.T Builders</h1>
+   
 
 
     <header>
@@ -166,8 +166,8 @@
 
       <section class="service-banner">
         <div class="banner-overlay-services">
-          <h2 class="banner-content">Roofing Repairs & New Installations</h2>
-          <p>Expert roofing solutions tailored to your needs in Kent</p>
+          <h1 class="banner-content">Roofing Repairs & New Installations</h1>
+          <h4>Expert roofing solutions tailored to your needs in Kent</h4>
         </div>
       </section>
       
@@ -176,18 +176,18 @@
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Roofing Services in Kent</h2>
+      <h1>Roofing Services in Kent</h1>
       <p>Reliable repairs and new roofing installations across Maidstone, Canterbury, Ashford, and surrounding areas.</p>
     </section>
 
     <section class="service-content">
-      <h3>Expert Roofing for Homes and Businesses</h3>
+      <h1>Expert Roofing for Homes and Businesses</h1>
       <p>
-        At A.P.T Builders, we provide professional roofing services throughout Kent. 
+        At A.P.T. Builders, we provide professional roofing services throughout Kent. 
         Whether it’s a small leak, damaged tiles, or a complete new roof installation, we are experienced and fully equipped to handle it.
       </p>
 
-      <h3 class="included-services">Our Roofing Services Include:</h3>
+      <h1 class="included-services">Our Roofing Services Include:</h1>
       <ul>
         <li>New roof installations (pitched and flat)</li>
         <li>Tile and slate replacements</li>
@@ -198,12 +198,12 @@
 
       
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         We proudly serve Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and the wider Kent area, providing dependable roofing services tailored to your property.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T. Builders?</h1>
       <ul>
         <li>18+ years of experience</li>
         <li>Fully insured and reliable</li>
@@ -282,7 +282,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
