--- a/services.html
+++ b/services.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="description" content="Explore our expert building services in Kent: roofing, kitchens, bathrooms, landscaping, brickwork, paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Explore APT Builders full range of services across Kent, roofing, extensions, kitchens, bathrooms, landscaping, decorating & more.">
   <meta name="keywords" content="building services Kent, Kent builders, roofing, bathroom fitting, kitchen fitting, landscaping, groundwork, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
-  <title>Our Services | A.P.T Builders in Kent</title>
+  <title>Our Services | A.P.T. Builders in Kent</title>
 
   <link rel="canonical" href="https://www.aptbuilders.co.uk/services.html" />
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
@@ -32,7 +32,7 @@
   </head>
 
 <body>
-<h1 class="visually-hidden">Our Building Services Across Kent | A.P.T Builders</h1>
+
     <header>
         <div class="header">
         <a href="index.html">
@@ -115,8 +115,8 @@
       
       <section class="service-banner-services">
         <div class="banner-overlay-services">
-          <h2 class="banner-content">Our Building Services in Kent</h2>
-          <p >Proudly serving Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and surrounding areas</p>
+          <h1 class="banner-content">Our Building Services in Kent</h1>
+          <h4 >Proudly serving Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and surrounding areas</h4>
         </div>
       </section>
 
@@ -246,7 +246,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
