--- a/blockpaving.html
+++ b/blockpaving.html
@@ -77,8 +77,7 @@
   <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-  <h1 class="visually-hidden">Block Paving Services in Kent | A.P.T Builders</h1>
-
+  
 
   <header>
     <div class="header">
@@ -160,25 +159,25 @@
 
   <section class="service-banner-blockpaving">
     <div class="banner-overlay-services">
-      <h2 class="banner-content">Block Paving & Pathways</h2>
-      <p>Durable, stylish driveways and paving laid across Kent.</p>
+      <h1 class="banner-content">Block Paving & Pathways</h1>
+      <h4>Durable, stylish driveways and paving laid across Kent.</h4>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Block Paving & Driveway Services in Kent</h2>
+      <h1>Block Paving & Driveway Services in Kent</h1>
       <p>Professional installation of driveways, patios, and garden paths throughout Maidstone, Ashford, Canterbury, and more.</p>
     </section>
 
     <section class="service-content">
-      <h3>Custom Driveways & Garden Paths</h3>
+      <h1>Custom Driveways & Garden Paths</h1>
       <p>
         At A.P.T Builders, we specialise in high quality block paving and surfacing for homes and commercial properties. 
         Our team ensures every surface is well prepared, properly drained, and professionally finished to enhance your property's kerb appeal.
       </p>
 
-      <h3 class="included-services">Our Paving & Surfacing Services Include:</h3>
+      <h1 class="included-services">Our Paving & Surfacing Services Include:</h1>
       <ul>
         <li>Block paving driveways & patios</li>
         <li>Pathways, steps & edging</li>
@@ -187,12 +186,12 @@
         <li>Drainage & ground preparation</li>
       </ul>
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         We cover Maidstone, Canterbury, Ashford, Tunbridge Wells, Sevenoaks and surrounding areas, creating outdoor spaces that last.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>18+ years of experience in paving & groundwork</li>
         <li>Fully insured and reliable</li>
@@ -265,7 +264,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
