--- a/gallery-page1.html
+++ b/gallery-page1.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="View A.P.T. Builders roofing gallery. expert roof repairs, new roof installations, pitched and flat roofs completed across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="View our roofing gallery showcasing recent projects across Kent, including Ashford, Maidstone, Canterbury, Folkestone & more.">
   <meta name="keywords" content="roofing gallery Kent, roof repairs, new roof installations, pitched roofs, flat roofs, Ashford roofers, Maidstone roof services, Folkestone roofing projects, Canterbury builders, APT Builders roofing">
   <meta name="robots" content="index, follow">
-  <title>Roofing Gallery | A.P.T Builders, Kent Roofing Projects in Ashford, Maidstone, Folkestone & Canterbury</title>
+  <title>Roofing Gallery | A.P.T. Builders, Projects Across Kent</title>
 
   <link rel="icon" href="images/aptfavicon.png" type="image/png">
   <link rel="canonical" href="https://www.aptbuilders.co.uk/gallery-page1.html" />
@@ -36,7 +36,7 @@
 
 
 <body>
-  <h1 class="visually-hidden">Roofing Project Gallery, A.P.T. Builders </h1>
+
 
 
   <div class="page-wrapper">
@@ -402,7 +402,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
