--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <meta name="description" content="Explore A.P.T. Builders bathroom gallery, showcasing fitted bathrooms, tiling, walk-in showers, bath refits and plumbing work across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="description" content="Explore our bathroom gallery featuring recent installations across Kent, including Ashford, Maidstone, Canterbury & Folkestone.">
   <meta name="keywords" content="bathroom fitting, fitted bathrooms, bathroom gallery, Kent bathrooms, walk-in showers, bath refits, plumbing installations, bathroom renovation, Ashford, Maidstone, Folkestone, Canterbury">
   
   <meta name="robots" content="index, follow">
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <h1 class="visually-hidden">Bathroom Project Gallery, A.P.T. Builders in Kent</h1>
+
 
 
   <div class="page-wrapper">
@@ -418,7 +418,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
