--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -34,7 +34,7 @@
 
 </head>
 <body>
-  <h1 class="visually-hidden">Block Paving Driveways Gallery in Kent | A.P.T. Builders</h1>
+  
 
 
   <div class="page-wrapper">
@@ -367,7 +367,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
