--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -43,7 +43,7 @@
 
  
 <body>
-   <h1 class="visually-hidden">Landscaping Project Gallery | Turfing, Patios, and Garden Work Across Kent</h1>
+  
 
 
   <div class="page-wrapper">
@@ -559,7 +559,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
