--- a/landscaping.html
+++ b/landscaping.html
@@ -78,8 +78,7 @@
 
 </head>
 <body>
-  <h1 class="visually-hidden">Landscaping Services in Kent | A.P.T Builders</h1>
-
+  
   <header>
     <div class="header">
       <a href="index.html">
@@ -159,25 +158,25 @@
 
   <section class="service-banner-landscaping">
     <div class="banner-overlay-services">
-      <h2 class="banner-content">Landscaping & Groundworks</h2>
-      <p>Transforming outdoor spaces across Kent with care and creativity.</p>
+      <h1 class="banner-content">Landscaping & Groundworks</h1>
+      <h4>Transforming outdoor spaces across Kent with care and creativity.</h4>
     </div>
   </section>
 
   <main class="service-page">
     <section class="service-hero">
-      <h2>Landscaping Services in Kent</h2>
+      <h1>Landscaping Services in Kent</h1>
       <p>Covering Maidstone, Ashford, Canterbury and surrounding areas with expert garden and groundwork solutions.</p>
     </section>
 
     <section class="service-content">
-      <h3>Enhance Your Outdoor Space</h3>
+      <h1>Enhance Your Outdoor Space</h1>
       <p>
         A.P.T Builders offers complete landscaping services for residential and commercial clients. 
         From hard landscaping like patios and pathways to soft features like turfing and planting, we help shape functional and beautiful outdoor environments.
       </p>
 
-      <h3 class="included-services">Our Landscaping Services Include:</h3>
+      <h1 class="included-services">Our Landscaping Services Include:</h1>
       <ul>
         <li>Ground preparation & drainage</li>
         <li>Turfing, seeding & planting</li>
@@ -186,12 +185,12 @@
         <li>Fencing, decking & retaining walls</li>
       </ul>
 
-      <h3 class="service-locations">Serving All of Kent</h3>
+      <h1 class="service-locations">Serving All of Kent</h1>
       <p>
         Based in Kent, we operate across Maidstone, Canterbury, Ashford, Tunbridge Wells, and nearby towns, providing outdoor spaces that are both practical and attractive.
       </p>
 
-      <h3>Why Choose A.P.T Builders?</h3>
+      <h1>Why Choose A.P.T Builders?</h1>
       <ul>
         <li>18+ years of hands on experience</li>
         <li>Friendly, professional, and fully insured</li>
@@ -266,7 +265,7 @@ document.addEventListener('DOMContentLoaded', () => {
 <div id="cookie-banner" class="cookie-banner">
   <p>
     We use cookies to enhance your experience. 
-    <a href="/privacy-policy.html">Learn more</a>
+    <a href="privacy-policy.html">Learn more</a>
   </p>
   <div class="cookie-buttons">
     <button class="accept" onclick="handleCookieChoice(true)">Accept</button>
