--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -96,12 +96,11 @@
   </div>
 </header>
 
-
-   
+   <h1 class="privacy-heading">Our Privacy Policy</h1>
    <main class="service-page">
-    <section class="privacy-policy">
-      <h1 class="visually-hidden">Privacy Policy</h1>
-
+   <section class="privacy-policy">
+    
+     
       <h2>Who We Are</h2>
       <p>A.P.T Builders is a construction and building services provider serving clients in Kent. This privacy policy outlines how we collect, use, and protect your information.</p>
       <p><strong>Last updated:</strong> June 23, 2025</p>
